--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -1,6 +1,6 @@
 <!--index.wxml-->
 <import src="../template/template.wxml" />
-<template is="progress" /> 
+<template is="progress" data="{{per}}" /> 
 
 <view class="container firstpage">
 
